[gd_scene load_steps=4 format=3 uid="uid://bp82ej1c8ldrj"]

[ext_resource type="Script" uid="uid://dpebjixp43ubt" path="res://Scripts/settings.gd" id="1_icv2g"]
[ext_resource type="FontFile" uid="uid://cdeayi78jcwd1" path="res://Fonts/space-frigate-font/SpaceFrigate-KVdW.ttf" id="2_7y5a0"]
[ext_resource type="FontFile" uid="uid://bh6gp3eaf2n87" path="res://Fonts/snail-mail-ldo-font/SnailMailLdo-Wyav.ttf" id="3_h2y1r"]

[node name="SettingsMenuRoot" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_icv2g")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_top = 20.0
offset_right = -375.0
offset_bottom = -20.0
grow_vertical = 2
color = Color(0.39688927, 0.39688927, 0.39688924, 1)

[node name="Header" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 15.0
offset_right = 48.5
offset_bottom = 50.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7y5a0")
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="MasterVolume" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -204.0
offset_right = 189.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="ColorRect/MasterVolume"]
layout_mode = 1
offset_right = 135.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_h2y1r")
text = "Master Volume: 0"

[node name="HSlider" type="HSlider" parent="ColorRect/MasterVolume"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="BackgroundMusic" type="Control" parent="ColorRect"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.24700001
anchor_right = 0.5
anchor_bottom = 0.24700001
offset_left = -186.0
offset_top = -20.17601
offset_right = 189.0
offset_bottom = 19.82399
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="ColorRect/BackgroundMusic"]
layout_mode = 1
offset_right = 160.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_h2y1r")
text = "Background Music: 0"

[node name="HSlider" type="HSlider" parent="ColorRect/BackgroundMusic"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="SFXVolume" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -144.0
offset_right = 189.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="ColorRect/SFXVolume"]
layout_mode = 1
offset_right = 108.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_h2y1r")
text = "SFX Volume: 0"

[node name="HSlider" type="HSlider" parent="ColorRect/SFXVolume"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -20.0
offset_right = -7.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2

[node name="Close" type="Button" parent="ColorRect"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 47.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("3_h2y1r")
theme_override_font_sizes/font_size = 22
action_mode = 0
text = "x"

[node name="Abandon" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -46.0
offset_right = 128.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_7y5a0")
action_mode = 0
text = "Abandon Run"

[node name="Restart" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -177.0
offset_top = -46.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_7y5a0")
text = "Restart Level"

[connection signal="value_changed" from="ColorRect/MasterVolume/HSlider" to="." method="_on_masterVolume_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/BackgroundMusic/HSlider" to="." method="_on_backgroundMusic_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/SFXVolume/HSlider" to="." method="_on_sfxVolume_slider_value_changed"]
[connection signal="pressed" from="ColorRect/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ColorRect/Abandon" to="." method="_on_abandon_pressed"]
[connection signal="pressed" from="ColorRect/Restart" to="." method="_on_restart_pressed"]
